revert back to java 23 until gradle 8.14